minor enchancments